# rs-guard

./: .gitignore  .markdownlint.json  .reviewer.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_1.2.3.md  codecov.yml  deny.toml  pr-body.md  review-result.txt
.github/: review-prompt.md
.github/workflows/: ai-review.yml  ci.yml  docs-deploy.yml  release.yml  rs-guard-review.yml
benches/: verdict.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  GITHUB_BOT_SETUP.md  INSTALLATION.md  LOCAL_MODE.md  MVP_IMPLEMENTATION_PLAN.md  PERFORMANCE.md  PROVIDERS.md  RELEASE_1.6.0.md  USAGE.md  implementation-guide.md  v1.6.md  v1.7.md  v1.8.md
examples/github-actions-workflow/: README.md  ai-review.yml  backend-api.yml  fork-safe.yml  frontend-spa.yml  rails.yml  react-vite.yml  review-prompt.md
examples/local-review/: husky-setup.md  pre-commit-hook.sh
examples/prompts/: README.md  backend-api.md  cli-tooling.md  frontend-spa.md  general-code-review.md  rails.md  react-vite.md
scripts/: install-hooks.sh  rs-guard-smoke.sh
src/: cache.rs  cli.rs  config.rs  diff.rs  error.rs  github.rs  http.rs  lib.rs  main.rs  output.rs  pipeline.rs  redact.rs  repo.rs  retry.rs  rules.rs  scaffold.rs  verdict.rs
src/llm/: deepseek.rs  factory.rs  generic_client.rs  kimi.rs  mod.rs  openai.rs  openrouter.rs  providers.rs  qwen.rs
tests/: config_tests.rs  diff_tests.rs  integration_tests.rs  prompt_tests.rs  provider_tests.rs  rules_tests.rs  scaffold_tests.rs  verdict_tests.rs
tests/test_data/: sample_diff.diff  verdict_positive.txt
