[package]
name = "rs-guard"
version = "1.0.0"
edition = "2021"
authors = ["Nebula Ideas <hello@nebulaideas.dev>"]
license = "MIT"
description = "AI-powered code review CLI for GitHub PRs"
repository = "https://github.com/nebulaideas/rs-guard"
homepage = "https://github.com/nebulaideas/rs-guard"
documentation = "https://docs.rs/rs-guard"
readme = "README.md"
keywords = ["ai", "code-review", "github", "llm", "cli", "devops"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.82"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
url = "2.5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serial_test = "3.5.0"
tempfile = "3.14"
wiremock = "0.6"

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "verdict"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
